Small changes to config

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "mindle-c799",
+  "$schema": "https://json.schemastore.org/package",
+  "name": "mindle",
   "private": true,
   "sideEffects": false,
   "type": "module",
