--- a/package.json
+++ b/package.json
@@ -51,8 +51,9 @@
     "@libsql/client": "^0.7.0",
     "@nasa-gcn/remix-seo": "^2.0.0",
     "@paralleldrive/cuid2": "^2.2.2",
-    "@prisma/client": "^5.15.0",
+    "@prisma/client": "^5.16.2",
     "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
@@ -88,8 +89,8 @@
     "isbot": "^5.1.9",
     "litefs-js": "^1.1.2",
     "lru-cache": "^10.2.2",
+    "lucide-react": "^0.407.0",
     "morgan": "^1.10.0",
-    "prisma": "^5.15.0",
     "qrcode": "^1.5.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -149,6 +150,7 @@
     "prettier": "^3.3.1",
     "prettier-plugin-sql": "^0.18.0",
     "prettier-plugin-tailwindcss": "^0.6.1",
+    "prisma": "^5.16.2",
     "remix-flat-routes": "^0.6.5",
     "tsx": "^4.12.0",
     "typescript": "^5.4.5",
