--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "morgan": "^1.10.0",
     "qrcode": "^1.5.3",
     "react": "^18.3.1",
+    "react-d3-tree": "^3.6.2",
     "react-dom": "^18.3.1",
     "remix-auth": "^3.7.0",
     "remix-auth-github": "^1.7.0",
