--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
     "tailwindcss": "^3.4.4",
     "tailwindcss-animate": "^1.0.7",
     "tailwindcss-radix": "^3.0.3",
+    "vaul": "^0.9.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
