--- a/package.json
+++ b/package.json
@@ -113,6 +113,7 @@
   },
   "devDependencies": {
     "@epic-web/config": "^1.10.0",
+    "@eslint/compat": "^1.1.1",
     "@faker-js/faker": "^8.4.1",
     "@playwright/test": "^1.44.1",
     "@remix-run/dev": "2.9.2",
