--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "execa": "^9.2.0",
     "express": "^4.19.2",
     "express-rate-limit": "^7.3.0",
+    "framer-motion": "^11.3.7",
     "get-port": "^7.1.0",
     "glob": "^10.4.1",
     "helmet": "^7.1.0",
