--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
+    "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@react-email/components": "0.0.17",
     "@remix-run/express": "2.9.2",
@@ -65,6 +66,14 @@
     "@remix-run/react": "2.9.2",
     "@sentry/profiling-node": "^8.11.0",
     "@sentry/remix": "^8.11.0",
+    "@tiptap/extension-color": "^2.5.6",
+    "@tiptap/extension-hard-break": "^2.5.6",
+    "@tiptap/extension-list-item": "^2.5.6",
+    "@tiptap/extension-ordered-list": "^2.5.6",
+    "@tiptap/extension-text-style": "^2.5.6",
+    "@tiptap/pm": "^2.5.6",
+    "@tiptap/react": "^2.5.6",
+    "@tiptap/starter-kit": "^2.5.6",
     "address": "^2.0.2",
     "bcryptjs": "^2.4.3",
     "better-sqlite3": "^11.0.0",
@@ -122,6 +131,7 @@
     "@remix-run/testing": "2.9.2",
     "@sentry/vite-plugin": "^2.19.0",
     "@sly-cli/sly": "^1.10.0",
+    "@tailwindcss/typography": "^0.5.13",
     "@testing-library/dom": "^10.1.0",
     "@testing-library/jest-dom": "^6.4.5",
     "@testing-library/react": "^16.0.0",
