Add table components to prepare for mindle editor

--- a/package.json
+++ b/package.json
@@ -66,14 +66,30 @@
     "@remix-run/react": "2.9.2",
     "@sentry/profiling-node": "^8.11.0",
     "@sentry/remix": "^8.11.0",
+    "@tiptap-pro/extension-emoji": "^2.10.3",
+    "@tiptap-pro/extension-table-of-contents": "^2.10.3",
+    "@tiptap/extension-character-count": "^2.5.7",
     "@tiptap/extension-color": "^2.5.6",
+    "@tiptap/extension-focus": "^2.5.7",
     "@tiptap/extension-hard-break": "^2.5.6",
+    "@tiptap/extension-highlight": "^2.5.7",
+    "@tiptap/extension-image": "^2.5.7",
+    "@tiptap/extension-link": "^2.5.7",
     "@tiptap/extension-list-item": "^2.5.6",
     "@tiptap/extension-ordered-list": "^2.5.6",
+    "@tiptap/extension-placeholder": "^2.5.7",
+    "@tiptap/extension-subscript": "^2.5.7",
+    "@tiptap/extension-superscript": "^2.5.7",
+    "@tiptap/extension-table": "^2.5.7",
+    "@tiptap/extension-table-header": "^2.5.7",
+    "@tiptap/extension-text-align": "^2.5.7",
     "@tiptap/extension-text-style": "^2.5.6",
+    "@tiptap/extension-typography": "^2.5.7",
+    "@tiptap/extension-underline": "^2.5.7",
     "@tiptap/pm": "^2.5.6",
     "@tiptap/react": "^2.5.6",
     "@tiptap/starter-kit": "^2.5.6",
+    "@tiptap/suggestion": "^2.5.7",
     "address": "^2.0.2",
     "bcryptjs": "^2.4.3",
     "better-sqlite3": "^11.0.0",
