--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-toggle": "^1.1.0",
@@ -66,11 +67,14 @@
     "@remix-run/react": "2.9.2",
     "@sentry/profiling-node": "^8.11.0",
     "@sentry/remix": "^8.11.0",
+    "@tippyjs/react": "^4.2.6",
+    "@tiptap-pro/extension-drag-handle-react": "^2.10.5",
     "@tiptap-pro/extension-emoji": "^2.10.3",
     "@tiptap-pro/extension-table-of-contents": "^2.10.3",
     "@tiptap/extension-character-count": "^2.5.7",
     "@tiptap/extension-color": "^2.5.6",
     "@tiptap/extension-focus": "^2.5.7",
+    "@tiptap/extension-font-family": "^2.5.7",
     "@tiptap/extension-hard-break": "^2.5.6",
     "@tiptap/extension-highlight": "^2.5.7",
     "@tiptap/extension-image": "^2.5.7",
@@ -115,10 +119,10 @@
     "isbot": "^5.1.9",
     "litefs-js": "^1.1.2",
     "lru-cache": "^10.2.2",
-    "lucide-react": "^0.408.0",
     "morgan": "^1.10.0",
     "qrcode": "^1.5.3",
     "react": "^18.3.1",
+    "react-colorful": "^5.6.1",
     "react-d3-tree": "^3.6.2",
     "react-dom": "^18.3.1",
     "remix-auth": "^3.7.0",
