--- a/package.json
+++ b/package.json
@@ -68,28 +68,47 @@
     "@sentry/profiling-node": "^8.11.0",
     "@sentry/remix": "^8.11.0",
     "@tippyjs/react": "^4.2.6",
-    "@tiptap-pro/extension-drag-handle-react": "^2.10.5",
+    "@tiptap-pro/extension-drag-handle": "^2.10.3",
+    "@tiptap-pro/extension-drag-handle-react": "^2.10.3",
     "@tiptap-pro/extension-emoji": "^2.10.3",
+    "@tiptap-pro/extension-file-handler": "^2.10.3",
+    "@tiptap-pro/extension-mathematics": "^2.10.3",
+    "@tiptap-pro/extension-node-range": "^2.10.3",
     "@tiptap-pro/extension-table-of-contents": "^2.10.3",
-    "@tiptap/extension-character-count": "^2.5.7",
-    "@tiptap/extension-color": "^2.5.6",
-    "@tiptap/extension-focus": "^2.5.7",
-    "@tiptap/extension-font-family": "^2.5.7",
+    "@tiptap-pro/extension-unique-id": "^2.10.3",
+    "@tiptap/core": "^2.5.4",
+    "@tiptap/extension-bullet-list": "^2.5.4",
+    "@tiptap/extension-character-count": "^2.5.4",
+    "@tiptap/extension-code-block": "^2.5.4",
+    "@tiptap/extension-code-block-lowlight": "^2.5.4",
+    "@tiptap/extension-collaboration": "^2.5.4",
+    "@tiptap/extension-collaboration-cursor": "^2.5.4",
+    "@tiptap/extension-color": "^2.5.4",
+    "@tiptap/extension-document": "^2.5.4",
+    "@tiptap/extension-dropcursor": "^2.5.4",
+    "@tiptap/extension-focus": "^2.5.4",
+    "@tiptap/extension-font-family": "^2.5.4",
     "@tiptap/extension-hard-break": "^2.5.6",
-    "@tiptap/extension-highlight": "^2.5.7",
-    "@tiptap/extension-image": "^2.5.7",
-    "@tiptap/extension-link": "^2.5.7",
+    "@tiptap/extension-heading": "^2.5.4",
+    "@tiptap/extension-highlight": "^2.5.4",
+    "@tiptap/extension-horizontal-rule": "^2.5.4",
+    "@tiptap/extension-image": "^2.5.4",
+    "@tiptap/extension-link": "^2.5.4",
     "@tiptap/extension-list-item": "^2.5.6",
-    "@tiptap/extension-ordered-list": "^2.5.6",
-    "@tiptap/extension-placeholder": "^2.5.7",
-    "@tiptap/extension-subscript": "^2.5.7",
-    "@tiptap/extension-superscript": "^2.5.7",
-    "@tiptap/extension-table": "^2.5.7",
-    "@tiptap/extension-table-header": "^2.5.7",
-    "@tiptap/extension-text-align": "^2.5.7",
-    "@tiptap/extension-text-style": "^2.5.6",
-    "@tiptap/extension-typography": "^2.5.7",
-    "@tiptap/extension-underline": "^2.5.7",
+    "@tiptap/extension-ordered-list": "^2.5.4",
+    "@tiptap/extension-paragraph": "^2.5.4",
+    "@tiptap/extension-placeholder": "^2.5.4",
+    "@tiptap/extension-subscript": "^2.5.4",
+    "@tiptap/extension-superscript": "^2.5.4",
+    "@tiptap/extension-table": "^2.5.4",
+    "@tiptap/extension-table-header": "^2.5.4",
+    "@tiptap/extension-table-row": "^2.5.4",
+    "@tiptap/extension-task-item": "^2.5.4",
+    "@tiptap/extension-task-list": "^2.5.4",
+    "@tiptap/extension-text-align": "^2.5.4",
+    "@tiptap/extension-text-style": "^2.5.4",
+    "@tiptap/extension-typography": "^2.5.4",
+    "@tiptap/extension-underline": "^2.5.4",
     "@tiptap/pm": "^2.5.6",
     "@tiptap/react": "^2.5.6",
     "@tiptap/starter-kit": "^2.5.6",
@@ -139,6 +158,9 @@
     "tailwindcss-radix": "^3.0.3",
     "vaul": "^0.9.1",
     "web-oidc": "^0.0.19",
+    "y-prosemirror": "^1.2.9",
+    "y-protocols": "^1.0.6",
+    "yjs": "^13.6.18",
     "zod": "^3.23.8"
   },
   "devDependencies": {
