Configure private tiptap npm registry

--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,5 @@
 legacy-peer-deps=true
 registry=https://registry.npmjs.org/
+@tiptap-pro:registry=https://registry.tiptap.dev/
+//registry.tiptap.dev/:_authToken=${TIPTAP_PRO_TOKEN}
+
