--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,6 +14,9 @@ permissions:
   actions: write
   contents: read
 
+env:
+  TIPTAP_PRO_TOKEN: ${{ secrets.TIPTAP_PRO_TOKEN }}
+
 jobs:
   lint:
     name: ⬣ ESLint
