--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "@tiptap/extension-hard-break": "^2.5.6",
     "@tiptap/extension-heading": "^2.5.4",
     "@tiptap/extension-highlight": "^2.5.4",
+    "@tiptap/extension-history": "^2.5.7",
     "@tiptap/extension-horizontal-rule": "^2.5.4",
     "@tiptap/extension-image": "^2.5.4",
     "@tiptap/extension-link": "^2.5.4",
