--- a/package.json
+++ b/package.json
@@ -121,6 +121,7 @@
     "class-variance-authority": "^0.7.0",
     "close-with-grace": "^1.3.0",
     "clsx": "^2.1.1",
+    "cmdk": "^1.0.0",
     "compression": "^1.7.4",
     "cookie": "^0.6.0",
     "cross-env": "^7.0.3",
