--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@epic-web/client-hints": "^1.3.2",
     "@epic-web/invariant": "^1.0.0",
     "@epic-web/remember": "^1.1.0",
+    "@epic-web/restore-scroll": "^1.1.1",
     "@epic-web/totp": "^1.1.2",
     "@libsql/client": "^0.7.0",
     "@nasa-gcn/remix-seo": "^2.0.0",
@@ -59,6 +60,7 @@
     "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.0.7",
