--- a/package.json
+++ b/package.json
@@ -130,6 +130,7 @@
     "cross-env": "^7.0.3",
     "crypto-js": "^4.2.0",
     "date-fns": "^3.6.0",
+    "dayjs": "^1.11.12",
     "dotenv": "^16.4.5",
     "execa": "^9.2.0",
     "express": "^4.19.2",
