--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@nasa-gcn/remix-seo": "^2.0.0",
     "@paralleldrive/cuid2": "^2.2.2",
     "@prisma/client": "^5.16.2",
+    "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
@@ -132,6 +133,7 @@
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.12",
     "dotenv": "^16.4.5",
+    "embla-carousel-react": "^8.1.8",
     "execa": "^9.2.0",
     "express": "^4.19.2",
     "express-rate-limit": "^7.3.0",
