Progress on landing page

--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-select": "^2.1.1",
+    "@radix-ui/react-slider": "^1.2.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-toast": "^1.1.5",
@@ -133,6 +134,7 @@
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.12",
     "dotenv": "^16.4.5",
+    "embla-carousel-autoplay": "^8.1.8",
     "embla-carousel-react": "^8.1.8",
     "execa": "^9.2.0",
     "express": "^4.19.2",
