--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,12 @@ HONEYPOT_SECRET="super-duper-s3cret"
 RESEND_API_KEY="re_blAh_blaHBlaHblahBLAhBlAh"
 SENTRY_DSN="your-dsn"
 
+# Settings for email client with SES
+AMAZON_SES_ACCESS_KEY="MOCK_123"
+AMAZON_SES_SECRET_ACCESS_KEY="MOCK_123"
+AMAZON_SES_REGION='eu-central-1'
+
+
 # this is set to a random value in the Dockerfile
 INTERNAL_COMMAND_TOKEN="some-made-up-token"
 
