--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "/server-build"
   ],
   "dependencies": {
+    "@aws-sdk/client-ses": "^3.632.0",
     "@conform-to/react": "^1.1.4",
     "@conform-to/zod": "^1.1.4",
     "@epic-web/cachified": "^5.2.0",
@@ -150,6 +151,7 @@
     "litefs-js": "^1.1.2",
     "lru-cache": "^10.2.2",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.9.14",
     "qrcode": "^1.5.3",
     "react": "^18.3.1",
     "react-colorful": "^5.6.1",
@@ -200,6 +202,7 @@
     "@types/glob": "^8.1.0",
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.14.2",
+    "@types/nodemailer": "^6.4.15",
     "@types/qrcode": "^1.5.5",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
