Add Sendy api key

--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,8 @@ AMAZON_SES_ACCESS_KEY="MOCK_123"
 AMAZON_SES_SECRET_ACCESS_KEY="MOCK_123"
 AMAZON_SES_REGION='eu-central-1'
 
+# Sendy Newsletter secrets
+SENDY_API_KEY='MOCK_123'
 
 # this is set to a random value in the Dockerfile
 INTERNAL_COMMAND_TOKEN="some-made-up-token"
