--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,7 @@ AMAZON_SES_REGION='eu-central-1'
 
 # Sendy Newsletter secrets
 SENDY_API_KEY='MOCK_123'
+SENDY_LIST_ID='MOCK_123'
 
 # this is set to a random value in the Dockerfile
 INTERNAL_COMMAND_TOKEN="some-made-up-token"
