--- a/package.json
+++ b/package.json
@@ -68,7 +68,9 @@
     "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-toggle": "^1.1.0",
+    "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@radix-ui/react-use-controllable-state": "^1.1.0",
     "@react-email/components": "0.0.17",
     "@remix-run/express": "2.9.2",
     "@remix-run/node": "2.9.2",
