--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "test:e2e:run": "cross-env CI=true playwright test",
     "test:e2e:install": "npx playwright install --with-deps chromium",
     "typecheck": "tsc",
-    "validate": "run-p \"test -- --run\" lint typecheck test:e2e:run"
+    "validate": "run-p \"test -- --run\" lint typecheck test:e2e:run",
+    "postinstall": "patch-package"
   },
   "eslintIgnore": [
     "/node_modules",
@@ -222,6 +223,7 @@
     "msw": "2.3.1",
     "node-html-parser": "^6.1.13",
     "npm-run-all": "^4.1.5",
+    "patch-package": "^8.0.0",
     "prettier": "^3.3.1",
     "prettier-plugin-sql": "^0.18.0",
     "prettier-plugin-tailwindcss": "^0.6.1",
