--- a/other/Dockerfile
+++ b/other/Dockerfile
@@ -14,7 +14,7 @@ FROM base as deps
 
 WORKDIR /myapp
 
-ADD package.json package-lock.json .npmrc ./
+ADD patches package.json package-lock.json .npmrc ./
 
 # Mount the secret and set it as an environment variable and run the build
 RUN --mount=type=secret,id=TIPTAP_PRO_TOKEN \
